--- a/index.html
+++ b/index.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Divya Sharma | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Divya Sharma | Software Developer</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <h1>Hi, I'm Divya Sharma</h1>
-    <p>Software Developer</p>
+  <header class="hero">
+    <div class="container">
+      <h1>Hello, I'm <span>Divya Sharma</span></h1>
+      <p>Software Developer | Web Developer | Problem Solver</p>
+    </div>
   </header>
 
-  <section>
+  <section class="about container">
     <h2>About Me</h2>
-    <p>I’m a passionate software developer skilled in Java, Python, and web technologies.</p>
+    <p>
+      I'm a passionate software developer with experience in Java, PHP, Python, CodeIgniter 4, and modern web technologies.
+      I enjoy building efficient systems and interactive web applications.
+    </p>
   </section>
 
-  <section>
+  <section class="projects container">
     <h2>Projects</h2>
+    <div class="project-list">
+      <div class="project">
+        <h3>HRMS Portal</h3>
+        <p>Developed a complete Human Resource Management System using CodeIgniter 4 with SLA escalation, file upload/download, and user management.</p>
+      </div>
+      <div class="project">
+        <h3>AI English Learning App</h3>
+        <p>Built a real-time feedback system using AI for learners to improve English reading with speech input and evaluation.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact container">
+    <h2>Contact</h2>
     <ul>
-      <li>🔹 HRMS Portal in CodeIgniter 4</li>
-      <li>🔹 AI English Learning App</li>
+      <li>Email: <a href="mailto:divya@example.com">divya@example.com</a></li>
+      <li>GitHub: <a href="https://github.com/gsdivya07" target="_blank">github.com/gsdivya07</a></li>
+      <li>LinkedIn: <a href="https://linkedin.com/in/YOUR-ID" target="_blank">linkedin.com/in/YOUR-ID</a></li>
     </ul>
   </section>
 
-  <section>
-    <h2>Contact</h2>
-    <p>Email: divya@example.com</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/your-profile">linkedin.com/in/your-profile</a></p>
-  </section>
+  <footer class="footer">
+    <p>© 2025 Divya Sharma. All rights reserved.</p>
+  </footer>
 </body>
 </html>
