--- a/index.html
+++ b/index.html
@@ -2,52 +2,109 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Divya Sharma | Software Developer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Divya GS | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="hero">
-    <div class="container">
-      <h1>Hello, I'm <span>Divya Sharma</span></h1>
-      <p>Software Developer | Web Developer | Problem Solver</p>
-    </div>
+    <h1>Hi, I'm <span>Divya GS</span></h1>
+    <p>Software Developer | PHP | WordPress | AI Tools Enthusiast</p>
+    <p>Bangalore, India | 📞 +91 8073577638 | ✉️ gsdivya07@gmail.com</p>
+    <p>
+      💻 <a href="https://github.com/gsdivya07" target="_blank">GitHub</a> |
+      🔗 <a href="https://linkedin.com/in/divyags07" target="_blank">LinkedIn</a> |
+      🌐 <a href="https://gsdivya07.github.io" target="_blank">Portfolio</a>
+    </p>
   </header>
 
-  <section class="about container">
-    <h2>About Me</h2>
-    <p>
-      I'm a passionate software developer with experience in Java, PHP, Python, CodeIgniter 4, and modern web technologies.
-      I enjoy building efficient systems and interactive web applications.
-    </p>
-  </section>
+  <main class="container">
+    <section class="about">
+      <h2>Professional Summary</h2>
+      <p>
+        Self-motivated and detail-oriented Software Developer, currently working at C2CAS,
+        contributing to dynamic web application development. Specialized in PHP and WordPress,
+        and interested in expanding into Java and React-based projects. Proficient in using AI tools
+        to boost coding efficiency and streamline workflows. Familiar with manual testing practices.
+        Passionate about clean code, continuous learning, and solving real-world challenges through technology.
+      </p>
+    </section>
 
-  <section class="projects container">
-    <h2>Projects</h2>
-    <div class="project-list">
-      <div class="project">
-        <h3>HRMS Portal</h3>
-        <p>Developed a complete Human Resource Management System using CodeIgniter 4 with SLA escalation, file upload/download, and user management.</p>
-      </div>
-      <div class="project">
-        <h3>AI English Learning App</h3>
-        <p>Built a real-time feedback system using AI for learners to improve English reading with speech input and evaluation.</p>
-      </div>
-    </div>
-  </section>
+    <section class="skills">
+      <h2>Technical Skills</h2>
+      <ul>
+        <li><strong>Front-End:</strong> HTML, CSS, JavaScript</li>
+        <li><strong>Back-End:</strong> PHP, MySQL</li>
+        <li><strong>Programming Languages:</strong> Python (Beginner), Java (Beginner)</li>
+        <li><strong>Development Tools:</strong> phpMyAdmin, Git, VS Code</li>
+        <li><strong>Multimedia:</strong> Video & Photo Editing</li>
+      </ul>
+    </section>
 
-  <section class="contact container">
-    <h2>Contact</h2>
-    <ul>
-      <li>Email: <a href="mailto:divya@example.com">divya@example.com</a></li>
-      <li>GitHub: <a href="https://github.com/gsdivya07" target="_blank">github.com/gsdivya07</a></li>
-      <li>LinkedIn: <a href="https://linkedin.com/in/YOUR-ID" target="_blank">linkedin.com/in/YOUR-ID</a></li>
-    </ul>
-  </section>
+    <section class="education">
+      <h2>Education</h2>
+      <p><strong>B.E – Computer Science Engineering</strong>, MVJCE, Bangalore (2023–2025)</p>
+      <p><strong>Diploma – Computer Science Engineering</strong>, GPTC, Bangalore (2019–2022)</p>
+    </section>
+
+    <section class="experience">
+      <h2>Experience</h2>
+      <p><strong>Software Developer</strong>, C2CAS Pvt. Ltd. — (Jul 2024 – Present)</p>
+      <ul>
+        <li>Contributed to live projects including HRMS (PHP CI4), Parkeze, and Company Website (WordPress).</li>
+        <li>Handled code migration from CodeIgniter 3 to 4 ensuring smooth performance.</li>
+        <li>Raised and tracked tickets for issue resolution and workflow management.</li>
+      </ul>
+    </section>
+
+    <section class="internships">
+      <h2>Internships</h2>
+      <ul>
+        <li><strong>C2CAS Pvt. Ltd.:</strong> 8-month internship in PHP development using CodeIgniter 4.</li>
+        <li><strong>Dotch Endeavours – Python (AI/ML):</strong> Built projects using Pandas, NumPy, scikit-learn.</li>
+        <li><strong>Dotch Endeavours – Full Stack:</strong> Created dynamic web apps using HTML, CSS, JavaScript, PHP.</li>
+      </ul>
+    </section>
+
+    <section class="projects">
+      <h2>Projects</h2>
+      <div class="project-list">
+        <div class="project">
+          <h3>Online Voting System</h3>
+          <p>Spring Boot app for secure institutional voting with role-based access, vote tracking, and real-time result display.</p>
+        </div>
+        <div class="project">
+          <h3>Child Care Management System</h3>
+          <p>Desktop app to track child data, health, and attendance with role-based login. Tech: Java</p>
+        </div>
+        <div class="project">
+          <h3>Smart Car Parking System</h3>
+          <p>GUI tool to simulate and track real-time parking slot availability. Tech: Python</p>
+        </div>
+        <div class="project">
+          <h3>Finger Count Navigation System</h3>
+          <p>Computer vision-based gesture controller using webcam input. Tech: Python</p>
+        </div>
+        <div class="project">
+          <h3>Readify – AI English App</h3>
+          <p>AI-powered web app to help users improve English by reading aloud and getting instant feedback. Tech: Python</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="certifications">
+      <h2>Certifications</h2>
+      <ul>
+        <li>Full Stack Web Dev & Python AI/ML – Dotch Endeavours</li>
+        <li>Infosys Springboard – Basics of Python</li>
+        <li>Skill Desk – IoT Training</li>
+        <li>C++ – SoftTech</li>
+      </ul>
+    </section>
+  </main>
 
   <footer class="footer">
-    <p>© 2025 Divya Sharma. All rights reserved.</p>
+    <p>&copy; 2025 Divya GS. All rights reserved.</p>
   </footer>
 </body>
 </html>
