--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Divya GS | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
     }
 
     body {
-      font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #e8f0ff, #ffffff);
+      background: linear-gradient(to bottom right, #f0f4f8, #dbeafe);
       color: #333;
-      overflow-x: hidden;
+      line-height: 1.6;
+      animation: fadeIn 1.2s ease;
     }
 
     header {
-      background-color: #007acc;
+      background: #1e40af;
       color: white;
-      padding: 4rem 2rem;
       text-align: center;
-      animation: slideFade 1s ease-in-out forwards;
+      padding: 2rem 1rem;
     }
 
     header h1 {
@@ -33,77 +34,58 @@
     }
 
     header p {
-      font-size: 1.2rem;
-      opacity: 0.9;
+      font-size: 1.1rem;
     }
 
-    section {
-      max-width: 960px;
+    .section {
+      max-width: 900px;
       margin: 2rem auto;
-      padding: 0 1rem;
-    }
-
-    h2 {
-      color: #007acc;
-      margin-bottom: 1rem;
-      position: relative;
-      display: inline-block;
-    }
-
-    h2::after {
-      content: '';
-      display: block;
-      height: 3px;
-      width: 50%;
-      background: #007acc;
-      margin-top: 4px;
-      border-radius: 2px;
-    }
-
-    .card {
       background: white;
-      border-radius: 10px;
-      padding: 1.5rem;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-      margin-bottom: 1.5rem;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      animation: fadeUp 1s ease-in;
+      padding: 1.5rem 2rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.07);
+      animation: slideUp 1s ease;
     }
 
-    .card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+    .section h2 {
+      border-bottom: 2px solid #3b82f6;
+      padding-bottom: 0.4rem;
+      margin-bottom: 1rem;
+      color: #1e3a8a;
     }
 
-    footer {
-      background: #f0f0f0;
-      padding: 2rem;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #555;
-      margin-top: 4rem;
+    ul {
+      padding-left: 1.2rem;
     }
 
-    @keyframes slideFade {
-      0% {
-        transform: translateY(-40px);
-        opacity: 0;
-      }
-      100% {
-        transform: translateY(0);
-        opacity: 1;
-      }
+    li {
+      margin-bottom: 0.6rem;
     }
 
-    @keyframes fadeUp {
-      0% {
-        transform: translateY(30px);
-        opacity: 0;
-      }
-      100% {
-        transform: translateY(0);
-        opacity: 1;
-      }
+    .contact i {
+      margin-right: 10px;
+      color: #1e40af;
+    }
+
+    .contact a {
+      text-decoration: none;
+      color: #1e40af;
+      display: block;
+      margin-bottom: 0.5rem;
+    }
+
+    .contact a:hover {
+      text-decoration: underline;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes slideUp {
+      from { transform: translateY(20px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
   </style>
 </head>
@@ -113,57 +95,60 @@
     <p>Software Developer | PHP, WordPress, Java | AI Enthusiast</p>
   </header>
 
-  <section>
+  <section class="section">
     <h2>Professional Summary</h2>
-    <div class="card">
-      <p>Self-motivated and detail-oriented Software Developer, currently working at C2CAS, contributing to dynamic web applications. Specialized in PHP & WordPress, with interest in Java & React. Familiar with manual testing & AI tools to enhance development workflows.</p>
-    </div>
-
-    <h2>Technical Skills</h2>
-    <div class="card">
-      <ul>
-        <li><strong>Front-End:</strong> HTML, CSS, JavaScript</li>
-        <li><strong>Back-End:</strong> PHP, MySQL</li>
-        <li><strong>Languages:</strong> Python (Beginner), Java (Beginner)</li>
-        <li><strong>Tools:</strong> phpMyAdmin, Git, VS Code</li>
-        <li><strong>Multimedia:</strong> Video & Photo Editing</li>
-      </ul>
-    </div>
-
-    <h2>Experience</h2>
-    <div class="card">
-      <p><strong>C2CAS Pvt. Ltd.</strong> — Software Developer (Jul 2024 – Present)</p>
-      <ul>
-        <li>HRMS: Developed attendance, leave & payroll modules (CodeIgniter 4).</li>
-        <li>Parkeze: Built parking management system with user role handling.</li>
-        <li>Company Website: Designed using WordPress.</li>
-        <li>Legacy Code Migration: CI3 to CI4.</li>
-      </ul>
-    </div>
-
-    <h2>Projects</h2>
-    <div class="card">
-      <p><strong>Readify – AI-Powered English Conversation App:</strong> Built to assess pronunciation & fluency using voice-to-text.</p>
-      <p><strong>Online Voting System:</strong> Spring Boot-based voting system with role-based access and real-time results.</p>
-      <p><strong>Child Care Management System:</strong> Java-based app with role login and health/staff log management.</p>
-      <p><strong>Smart Car Parking System:</strong> Python GUI-based slot detector and availability dashboard.</p>
-      <p><strong>Finger Count Navigation System:</strong> Computer vision project for hand gesture navigation.</p>
-    </div>
-
-    <h2>Contact</h2>
-    <div class="card">
-      <ul>
-        <li><strong>Email:</strong> gsdivya07@gmail.com</li>
-        <li><strong>Phone:</strong> +91 8073577638</li>
-        <li><strong>GitHub:</strong> github.com/gsdivya07</li>
-        <li><strong>LinkedIn:</strong> linkedin.com/in/divyags07</li>
-        <li><strong>Portfolio:</strong> gsdivya07.github.io</li>
-      </ul>
-    </div>
+    <p>Self-motivated and detail-oriented Software Developer, currently working at C2CAS, contributing to dynamic web applications. Specialized in PHP & WordPress, with interest in Java & React. Familiar with manual testing & AI tools to enhance development workflows.</p>
   </section>
 
-  <footer>
-    &copy; 2025 Divya GS. All Rights Reserved.
-  </footer>
+  <section class="section">
+    <h2>Technical Skills</h2>
+    <ul>
+      <li><strong>Front-End:</strong> HTML, CSS, JavaScript</li>
+      <li><strong>Back-End:</strong> PHP, MySQL</li>
+      <li><strong>Languages:</strong> Python (Intermediate), Java (Intermediate)</li>
+      <li><strong>Tools:</strong> phpMyAdmin, Git, VS Code</li>
+      <li><strong>Multimedia:</strong> Video & Photo Editing</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Experience</h2>
+    <ul>
+      <li><strong>C2CAS Pvt. Ltd.</strong> — Software Developer (Jul 2024 – Present)
+        <ul>
+          <li>HRMS: Developed attendance, leave & payroll modules (CodeIgniter 4)</li>
+          <li>Parkeze: Built parking management system with user role handling</li>
+          <li>Company Website: Designed using WordPress</li>
+          <li>Legacy Code Migration: CI3 to CI4</li>
+        </ul>
+      </li>
+      <li><strong>Dotch Endeavours</strong> — Internships
+        <ul>
+          <li>Python (AI/ML) – 1 Month</li>
+          <li>Full Stack Web Development – 1 Month</li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>Readify – AI-Powered English Conversation App:</strong> Built to assess pronunciation & fluency using voice-to-text.</li>
+      <li><strong>Online Voting System:</strong> Spring Boot-based voting system with role-based access and real-time results.</li>
+      <li><strong>Child Care Management System:</strong> Java-based app with role login and health/staff log management.</li>
+      <li><strong>Smart Car Parking System:</strong> Python GUI-based slot detector and availability dashboard.</li>
+      <li><strong>Finger Count Navigation System:</strong> Computer vision project for hand gesture navigation.</li>
+    </ul>
+  </section>
+
+  <section class="section contact">
+    <h2>Contact</h2>
+    <p><i class="fas fa-envelope"></i> <a href="mailto:gsdivya07@gmail.com">gsdivya07@gmail.com</a></p>
+    <p><i class="fas fa-phone"></i> <a href="tel:+918073577638">+91 8073577638</a></p>
+    <p><i class="fab fa-github"></i> <a href="https://github.com/gsdivya07" target="_blank">github.com/gsdivya07</a></p>
+    <p><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/divyags07" target="_blank">linkedin.com/in/divyags07</a></p>
+    <p><i class="fas fa-globe"></i> <a href="https://gsdivya07.github.io" target="_blank">gsdivya07.github.io</a></p>
+  </section>
 </body>
 </html>
