--- a/index.html
+++ b/index.html
@@ -2,153 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Divya GS | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
-
-    body {
-      background: linear-gradient(to bottom right, #f0f4f8, #dbeafe);
-      color: #333;
-      line-height: 1.6;
-      animation: fadeIn 1.2s ease;
-    }
-
-    header {
-      background: #1e40af;
-      color: white;
-      text-align: center;
-      padding: 2rem 1rem;
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-
-    header p {
-      font-size: 1.1rem;
-    }
-
-    .section {
-      max-width: 900px;
-      margin: 2rem auto;
-      background: white;
-      padding: 1.5rem 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.07);
-      animation: slideUp 1s ease;
-    }
-
-    .section h2 {
-      border-bottom: 2px solid #3b82f6;
-      padding-bottom: 0.4rem;
-      margin-bottom: 1rem;
-      color: #1e3a8a;
-    }
-
-    ul {
-      padding-left: 1.2rem;
-    }
-
-    li {
-      margin-bottom: 0.6rem;
-    }
-
-    .contact i {
-      margin-right: 10px;
-      color: #1e40af;
-    }
-
-    .contact a {
-      text-decoration: none;
-      color: #1e40af;
-      display: block;
-      margin-bottom: 0.5rem;
-    }
-
-    .contact a:hover {
-      text-decoration: underline;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    @keyframes slideUp {
-      from { transform: translateY(20px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Divya Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Divya GS</h1>
-    <p>Software Developer | PHP, WordPress, Java | AI Enthusiast</p>
-  </header>
-
-  <section class="section">
-    <h2>Professional Summary</h2>
-    <p>Self-motivated and detail-oriented Software Developer, currently working at C2CAS, contributing to dynamic web applications. Specialized in PHP & WordPress, with interest in Java & React. Familiar with manual testing & AI tools to enhance development workflows.</p>
-  </section>
-
-  <section class="section">
-    <h2>Technical Skills</h2>
-    <ul>
-      <li><strong>Front-End:</strong> HTML, CSS, JavaScript</li>
-      <li><strong>Back-End:</strong> PHP, MySQL</li>
-      <li><strong>Languages:</strong> Python (Intermediate), Java (Intermediate)</li>
-      <li><strong>Tools:</strong> phpMyAdmin, Git, VS Code</li>
-      <li><strong>Multimedia:</strong> Video & Photo Editing</li>
-    </ul>
-  </section>
-
-  <section class="section">
-    <h2>Experience</h2>
-    <ul>
-      <li><strong>C2CAS Pvt. Ltd.</strong> — Software Developer (Jul 2024 – Present)
-        <ul>
-          <li>HRMS: Developed attendance, leave & payroll modules (CodeIgniter 4)</li>
-          <li>Parkeze: Built parking management system with user role handling</li>
-          <li>Company Website: Designed using WordPress</li>
-          <li>Legacy Code Migration: CI3 to CI4</li>
-        </ul>
-      </li>
-      <li><strong>Dotch Endeavours</strong> — Internships
-        <ul>
-          <li>Python (AI/ML) – 1 Month</li>
-          <li>Full Stack Web Development – 1 Month</li>
-        </ul>
-      </li>
-    </ul>
-  </section>
-
-  <section class="section">
-    <h2>Projects</h2>
-    <ul>
-      <li><strong>Readify – AI-Powered English Conversation App:</strong> Built to assess pronunciation & fluency using voice-to-text.</li>
-      <li><strong>Online Voting System:</strong> Spring Boot-based voting system with role-based access and real-time results.</li>
-      <li><strong>Child Care Management System:</strong> Java-based app with role login and health/staff log management.</li>
-      <li><strong>Smart Car Parking System:</strong> Python GUI-based slot detector and availability dashboard.</li>
-      <li><strong>Finger Count Navigation System:</strong> Computer vision project for hand gesture navigation.</li>
-    </ul>
-  </section>
-
-  <section class="section contact">
-    <h2>Contact</h2>
-    <p><i class="fas fa-envelope"></i> <a href="mailto:gsdivya07@gmail.com">gsdivya07@gmail.com</a></p>
-    <p><i class="fas fa-phone"></i> <a href="tel:+918073577638">+91 8073577638</a></p>
-    <p><i class="fab fa-github"></i> <a href="https://github.com/gsdivya07" target="_blank">github.com/gsdivya07</a></p>
-    <p><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/divyags07" target="_blank">linkedin.com/in/divyags07</a></p>
-    <p><i class="fas fa-globe"></i> <a href="https://gsdivya07.github.io" target="_blank">gsdivya07.github.io</a></p>
-  </section>
+  <div class="container">
+    <h1>Divya - Portfolio</h1>
+    <div class="subtitle">Software Developer | PHP & CI4 Specialist | Tech Explorer</div>
+    <div class="description">
+      <p>
+        I am a dedicated and detail-oriented Software Developer with internship and professional experience in developing robust web applications. I’ve contributed to projects such as HRMS, PARKEZE, and Company Website using WordPress.
+      </p>
+      <br/>
+      <p>
+        Skilled in PHP, MySQL, CodeIgniter 4, and front-end technologies. Passionate about delivering high-quality code, solving real-world problems, and exploring emerging tech like AI and full-stack development.
+      </p>
+    </div>
+    <a href="#about" class="btn">About Me</a>
+  </div>
 </body>
 </html>
