--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Divya Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <title>Divya - Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>Divya - Portfolio</h1>
-    <div class="subtitle">Software Developer | PHP & CI4 Specialist | Tech Explorer</div>
-    <div class="description">
+    <div class="card">
+      <img src="65b80383-849e-41f6-b4ce-a3c8bdb521d3.png" alt="Profile" class="profile-image" />
+      <h1>Divya – Portfolio</h1>
+      <h3>Software Developer | PHP & CI4 Specialist | Tech Explorer</h3>
       <p>
-        I am a dedicated and detail-oriented Software Developer with internship and professional experience in developing robust web applications. I’ve contributed to projects such as HRMS, PARKEZE, and Company Website using WordPress.
+        I am a dedicated and detail-oriented Software Developer with internship and professional
+        experience in developing robust web applications. I’ve contributed to projects such as
+        HRMS, PARKEZE, and Company Website using WordPress.
       </p>
-      <br/>
       <p>
-        Skilled in PHP, MySQL, CodeIgniter 4, and front-end technologies. Passionate about delivering high-quality code, solving real-world problems, and exploring emerging tech like AI and full-stack development.
+        Skilled in PHP, MySQL, CodeIgniter 4, and front-end technologies. Passionate about
+        delivering high-quality code, solving real-world problems, and exploring emerging tech
+        like AI and full-stack development.
       </p>
+      <a href="#about" class="btn">About Me</a>
     </div>
-    <a href="#about" class="btn">About Me</a>
   </div>
 </body>
 </html>
