--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="card">
-      <img src="65b80383-849e-41f6-b4ce-a3c8bdb521d3.png" alt="Profile" class="profile-image" />
+      <img src="Media.jpg" alt="Profile" class="profile-image" />
       <h1>Divya – Portfolio</h1>
       <h3>Software Developer | PHP & CI4 Specialist | Tech Explorer</h3>
       <p>
