--- a/index.html
+++ b/index.html
@@ -3,63 +3,113 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Divya's Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>My Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      color: #fff;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 40px 20px;
+    }
+
+    .container {
+      max-width: 850px;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.6);
+      padding: 60px;
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+      animation: fadeIn 1.5s ease;
+    }
+
+    h1 {
+      font-size: 2.8rem;
+      font-weight: 700;
+      letter-spacing: 2px;
+      margin-bottom: 15px;
+    }
+
+    .subtitle {
+      font-size: 1rem;
+      font-weight: 500;
+      color: #ccc;
+      margin-bottom: 30px;
+    }
+
+    .description {
+      font-size: 1rem;
+      line-height: 1.7;
+      color: #ddd;
+    }
+
+    .btn {
+      margin-top: 35px;
+      display: inline-block;
+      padding: 12px 28px;
+      background: #00c6ff;
+      color: #000;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: all 0.3s ease;
+    }
+
+    .btn:hover {
+      background: #0072ff;
+      color: white;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(40px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        padding: 40px 20px;
+      }
+
+      h1 {
+        font-size: 2rem;
+      }
+
+      .description {
+        font-size: 0.9rem;
+      }
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Divya</h1>
-    <p class="subtitle">Aspiring Software Developer</p>
-  </header>
-
-  <div class="menu-wrapper">
-    <div class="menu-column left">
-      <div class="menu" onclick="showContent('about')">About Me</div>
-      <div class="menu" onclick="showContent('skills')">Technical Skills</div>
-      <div class="menu" onclick="showContent('projects')">Projects</div>
+  <div class="container">
+    <h1>YOUR NAME - PORTFOLIO</h1>
+    <div class="subtitle">Web Developer | Tech Enthusiast | Creative Thinker</div>
+    <div class="description">
+      <p>
+        Passionate web developer with a knack for creating clean and efficient websites and web apps. I specialize in front-end development using modern tools and technologies. Proficient in HTML, CSS, JavaScript, and eager to learn more every day.
+      </p>
+      <br/>
+      <p>
+        I love solving real-world problems, contributing to projects, and creating impactful digital experiences. Strong teamwork, critical thinking, and effective communication are my key strengths.
+      </p>
     </div>
-    
-    <div class="menu-column right">
-      <div class="menu" onclick="showContent('experience')">Experience</div>
-      <div class="menu" onclick="showContent('education')">Education</div>
-      <div class="menu" onclick="showContent('certifications')">Certifications</div>
-    </div>
+    <a href="#about" class="btn">About Me</a>
   </div>
-
-  <div class="menu-bottom">
-    <div class="menu" onclick="showContent('contact')">Contact</div>
-  </div>
-
-  <main id="content-display">
-    <p>Select a section to view details here.</p>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Divya | <a href="https://linkedin.com/in/your-link" target="_blank">LinkedIn</a> |
-       <a href="https://github.com/your-link" target="_blank">GitHub</a></p>
-  </footer>
-
-  <script>
-    const contentData = {
-      about: `<h2>About Me</h2><p>Hello! I'm Divya, an aspiring software developer passionate about building smart, scalable, and user-centric applications. I enjoy solving real-world problems through clean code.</p>`,
-      skills: `<h2>Technical Skills</h2>
-              <ul>
-                <li>HTML, CSS, JavaScript</li>
-                <li>PHP, MySQL, DBMS</li>
-                <li>Python (Basic), Java (Basic)</li>
-                <li>Git, VS Code, phpMyAdmin</li>
-                <li>Video & Photo Editing (VFX & Basic Editing)</li>
-              </ul>`,
-      projects: `<h2>Projects</h2><p>• HRMS Portal<br>• AI-Powered English Conversation Learning Web App<br>• Readify: Smart Learning Platform</p>`,
-      experience: `<h2>Experience</h2><p>1+ years experience in PHP and WordPress Development at C2CAS.</p>`,
-      education: `<h2>Education</h2><p>Bachelor of Technology in Computer Science and Engineering</p>`,
-      certifications: `<h2>Certifications</h2><ul><li>PHP Web Development</li><li>WordPress Customization</li><li>AI Tools & ChatGPT Prompt Engineering</li></ul>`,
-      contact: `<h2>Contact</h2><p>Email: your.email@example.com<br>Phone: +91-XXXXXXXXXX<br>Location: India</p>`
-    };
-
-    function showContent(section) {
-      document.getElementById('content-display').innerHTML = contentData[section] || "<p>Content not available.</p>";
-    }
-  </script>
 </body>
 </html>
