--- a/index.html
+++ b/index.html
@@ -3,113 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: #fff;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 40px 20px;
-    }
-
-    .container {
-      max-width: 850px;
-      text-align: center;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 60px;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
-      animation: fadeIn 1.5s ease;
-    }
-
-    h1 {
-      font-size: 2.8rem;
-      font-weight: 700;
-      letter-spacing: 2px;
-      margin-bottom: 15px;
-    }
-
-    .subtitle {
-      font-size: 1rem;
-      font-weight: 500;
-      color: #ccc;
-      margin-bottom: 30px;
-    }
-
-    .description {
-      font-size: 1rem;
-      line-height: 1.7;
-      color: #ddd;
-    }
-
-    .btn {
-      margin-top: 35px;
-      display: inline-block;
-      padding: 12px 28px;
-      background: #00c6ff;
-      color: #000;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: 600;
-      transition: all 0.3s ease;
-    }
-
-    .btn:hover {
-      background: #0072ff;
-      color: white;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(40px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @media (max-width: 600px) {
-      .container {
-        padding: 40px 20px;
-      }
-
-      h1 {
-        font-size: 2rem;
-      }
-
-      .description {
-        font-size: 0.9rem;
-      }
-    }
-  </style>
+  <title>Divya - Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>YOUR NAME - PORTFOLIO</h1>
-    <div class="subtitle">Web Developer | Tech Enthusiast | Creative Thinker</div>
-    <div class="description">
+    <div class="card">
+      <img src="65b80383-849e-41f6-b4ce-a3c8bdb521d3.png" alt="Profile" class="profile-image" />
+      <h1>Divya – Portfolio</h1>
+      <h3>Software Developer | PHP & CI4 Specialist | Tech Explorer</h3>
       <p>
-        Passionate web developer with a knack for creating clean and efficient websites and web apps. I specialize in front-end development using modern tools and technologies. Proficient in HTML, CSS, JavaScript, and eager to learn more every day.
+        I am a dedicated and detail-oriented Software Developer with internship and professional
+        experience in developing robust web applications. I’ve contributed to projects such as
+        HRMS, PARKEZE, and Company Website using WordPress.
       </p>
-      <br/>
       <p>
-        I love solving real-world problems, contributing to projects, and creating impactful digital experiences. Strong teamwork, critical thinking, and effective communication are my key strengths.
+        Skilled in PHP, MySQL, CodeIgniter 4, and front-end technologies. Passionate about
+        delivering high-quality code, solving real-world problems, and exploring emerging tech
+        like AI and full-stack development.
       </p>
+      <a href="#about" class="btn">About Me</a>
     </div>
-    <a href="#about" class="btn">About Me</a>
   </div>
 </body>
 </html>
