Revise title and enhance landing page content
Updated the title and modified the landing section.

--- a/index.html
+++ b/index.html
@@ -3,27 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Divya - Portfolio</title>
+  <title>Divya - Developer Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <div class="card">
-      <img src="Media.jpg" alt="Profile" class="profile-image" />
-      <h1>Divya – Portfolio</h1>
-      <h3>Software Developer | PHP & CI4 Specialist | Tech Explorer</h3>
-      <p>
-        I am a dedicated and detail-oriented Software Developer with internship and professional
-        experience in developing robust web applications. I’ve contributed to projects such as
-        HRMS, PARKEZE, and Company Website using WordPress.
-      </p>
-      <p>
-        Skilled in PHP, MySQL, CodeIgniter 4, and front-end technologies. Passionate about
-        delivering high-quality code, solving real-world problems, and exploring emerging tech
-        like AI and full-stack development.
-      </p>
-      <a href="#about" class="btn">About Me</a>
-    </div>
+  <div class="landing-container">
+    <img src="Media.jpg" alt="Profile" class="profile-landing" />
+    <h1>Hi, I'm Divya</h1>
+    <p>A Software Developer passionate about building efficient web applications using PHP, CodeIgniter, and modern front-end tools.</p>
   </div>
 </body>
 </html>
